@@ -6,7 +6,7 @@ RUN wget http://ftp.debian.org/debian/pool/main/d/db/libdb5.1++_5.1.29-5_amd64.d
 RUN wget http://ftp.debian.org/debian/pool/main/d/db/libdb5.1-dev_5.1.29-5_amd64.deb && dpkg -i libdb5.1-dev_5.1.29-5_amd64.deb
 RUN wget http://ftp.debian.org/debian/pool/main/d/db/libdb5.1++-dev_5.1.29-5_amd64.deb && dpkg -i libdb5.1++-dev_5.1.29-5_amd64.deb
 RUN git clone https://github.com/piggycoin/newpiggycoin.git /usr/local/src/piggycoin
-RUN cd /usr/local/src/piggycoin/src && make -f makefile.unix USE_UPNP=- USE_IPV6=1 USE_QRCODE=0 && strip newpiggycoind
+RUN cd /usr/local/src/piggycoin/src && make -f makefile.unix USE_UPNP= USE_IPV6=1 USE_QRCODE=0 && strip newpiggycoind
 RUN ln -s /usr/local/src/piggycoin/src/newpiggycoind /usr/local/bin/newpiggycoind
 RUN ln -s /usr/local/src/piggycoin/src/newpiggycoind /usr/local/bin/piggycoind
 EXPOSE 54481
