@@ -19,7 +19,7 @@ extern unsigned int nStakeMaxAge;
 // The following split & combine thresholds are important to security
 // Should not be adjusted if you don't understand the consequences
 unsigned int nStakeSplitAge = 12 * 60 * 60;
-int64_t nStakeCombineThreshold = 48000 * COIN;
+int64_t nStakeCombineThreshold = 50000 * COIN;
 
 //////////////////////////////////////////////////////////////////////////////
 //
@@ -1674,7 +1674,8 @@ bool CWallet::CreateCoinStake(const CKeyStore& keystore, unsigned int nBits, int
                 vwtxPrev.push_back(pcoin.first);
                 txNew.vout.push_back(CTxOut(0, scriptPubKeyOut));
 
-                if (GetWeight(block.GetBlockTime(), (int64_t)txNew.nTime) < nStakeSplitAge)
+                if ((nCredit >= nStakeCombineThreshold * 2) && (block.GetBlockTime() + nStakeSplitAge > txNew.nTime))
+                                                       // (GetWeight(block.GetBlockTime(), (int64_t)txNew.nTime) < nStakeSplitAge))
                     txNew.vout.push_back(CTxOut(0, scriptPubKeyOut)); //split stake
                 if (fDebug && GetBoolArg("-printcoinstake"))
                     printf("CreateCoinStake : added kernel type=%d\n", whichType);
